--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 .container {
-  background-image: url(../img/space2.jpg);
+  background-image: url(./img/space2.jpg);
   height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
